<resources>
    <string name="empty" translatable="false" />
    <string name="empty_space">\u0020</string>
    <string name="password_text" translatable="false">&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;</string>
    <string name="colon">:</string>
    <string name="comma">,</string>
    <string name="full_stop">.</string>
    <string name="percentage">%</string>
    <string name="hiphen">\u0020-\u0020</string>
    <string name="asterisk">*</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="pay_via_vpos">Pay via Vpos</string>
    <string name="my_balance_label">My Balance</string>
    <string name="enter_email_phone_to_continue">Enter email to continue…</string>
    <string name="sign_in_to_continue">Enter email to continue</string>
    <string name="welcome_back">Welcome!</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_with">Sign up for a new account!</string>
    <string name="new_user">New User?</string>
    <string name="sign_in">Sign in</string>
    <string name="continue_with">- or continue with -</string>
    <string name="continu">Continue</string>
    <string name="product">product</string>
    <string name="checkout">checkout</string>
    <string name="payment">payment</string>
    <string name="cart">cart</string>
    <string name="item">item</string>
    <string name="items">items</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="support">Support</string>
    <string name="chat_with_fugu">Chat Support</string>
    <string name="facebook">Facebook</string>
    <string name="google_plus">Google</string>
    <string name="instagram">Instagram</string>
    <string name="remote_server_failed_error">Remote server failed to respond</string>
    <string name="connection_timed_out_error">Connection timed out</string>
    <string name="remote_server_could_not_respond">Remote server could not respond</string>
    <string name="an_error_was_procured_while_parsing">An error was procured while parsing</string>
    <string name="an_unexpected_error_occurred">An unexpected error occurred</string>
    <string name="ssl_handshake_error">SSL handshake failed</string>
    <string name="connection_refused_error">Connection was refused from server</string>
    <string name="http_error">HTTP error occurred</string>
    <string name="not_connected_to_internet_text">No Internet Connection</string>
    <string name="connection_reset_error">Connection reset by peer</string>
    <string name="unexpected_end_stream">Unexpected end of stream</string>
    <string name="no_gallery">Gallery not found in this phone.</string>
    <string name="retry_text">Retry</string>
    <string name="no_internet_try_again">No Internet Connection. Please try again later.</string>
    <string name="socket_timeout_connection">No Internet Connection. Please try again later.</string>
    <string name="remote_server_failed_message">Something went wrong. Please try again later.</string>
    <string name="unexpected_error_occurred">Something went wrong. Please try again later.</string>
    <string name="parse_exception">Parse Exception</string>
    <string name="verify_mobile">Verify OTP</string>
    <string name="otp_message">Enter the OTP that you have received on your registered phone number</string>
    <string name="otp_message_phone">Enter the OTP that you’ve recieved on your phone number</string>
    <string name="otp_message_email">Enter the OTP that you’ve recieved on your email</string>
    <string name="change_number">Change number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verification_code_field_required">Please enter a 6-digit OTP</string>
    <string name="pick_up_location">Pick Up Location</string>
    <string name="rate_review">Rate &amp; Review</string>
    <string name="reason_for_cancellation">Reason for cancellation</string>
    <string name="enter_reason_for_cancellation">Enter reason for cancellation</string>
    <string name="cancel">Cancel</string>
    <string name="enter_sochitel_Id">Enter Sochitel Id</string>
    <string name="no_payment_card_found">No Cards Found</string>
    <string name="add_card">Add Card</string>
    <string name="add">Add</string>
    <string name="change">Change</string>
    <string name="select_operator">Select operator</string>
    <string name="remove">Remove</string>
    <string name="delete_card">Delete Card</string>
    <string name="view_card">View Card</string>
    <string name="view_menu_option">View</string>
    <string name="card_details">Debit card details</string>
    <string name="stripe">Stripe</string>
    <string name="authorise_dot_net">Authorise Dot Net</string>
    <string name="paypal">Paypal</string>
    <string name="payfort">Payfort</string>
    <string name="paytm">Paytm</string>
    <string name="instaPay">InstaPay</string>
    <string name="payFast">PayFast</string>
    <string name="inapp_wallet">In app wallet</string>
    <string name="unaccounted">Unaccounted</string>
    <string name="cash">Cash</string>
    <string name="pay_later">Pay later</string>
    <string name="venmo">Venmo</string>
    <string name="card">Card</string>
    <string name="pick_up_and_delivery_mandatory">Please enter both delivery and pick up details before proceeding.</string>
    <string name="please_try_again">Oops!! Some error occurred. Please try again.</string>
    <string name="sign_in_to">Sign in to your account!</string>
    <string name="sign_in_to_continue_demo">Sign in to continue!</string>
    <string name="sign_up_to_continue_demo">Sign up to continue!</string>
    <string name="your_email">Your email</string>
    <string name="enter_valid_email">Please enter valid email address</string>
    <string name="email_is_required">Email address is required</string>
    <string name="enter_valid_pickup_email">Please enter valid email address</string>
    <string name="enter_valid_delivery_email">Please enter valid delivery email address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="pass">Password</string>
    <string name="forgot_password_message">Enter your email address and we’ll send you a link to reset the password</string>
    <string name="next">Next</string>
    <string name="your_name">Your name</string>
    <string name="enter_valid_phone">Your phone number is invalid</string>
    <string name="enter_valid_pickup_phone">Your phone number is invalid</string>
    <string name="enter_valid_delivery_phone">Your delivery phone number is invalid</string>
    <string name="loading_text">Loading</string>
    <string name="ok_text">OK</string>
    <string name="view_text">View</string>
    <string name="message">Message</string>
    <string name="are_you_sure_text">Are you sure?</string>
    <string name="delete_task_confirmation">Are you sure you want to delete this?</string>
    <string name="yes_text">YES</string>
    <string name="no_text">NO</string>
    <string name="No_text">No</string>
    <string name="please_grant_permission_location_text">Please grant permission to Location</string>
    <string name="name">Name</string>
    <string name="sochitel_id">Sochitel Id:</string>
    <string name="email">Email</string>
    <string name="invalid_selected_date">Selected time should be greater than current time.</string>
    <string name="invalid_start_date_greater_than_current_time">Start time should be greater than current time.</string>
    <string name="invalid_end_date_greater_than_current_time">End time should be greater than current time.</string>
    <string name="invalid_start_date">Start time should be less than End time.</string>
    <string name="date_time_is_required">Date and time is required</string>
    <string name="start_time_is_required">Start time is required</string>
    <string name="end_time_is_required">End time is required</string>
    <string name="pickuo_date_time_is_required">Pickup date and time is required</string>
    <string name="delivery_date_time_is_required">Delivery date and time is required</string>
    <string name="signing_in">Signing in…</string>
    <string name="signinig_up">Signing Up…</string>
    <string name="logout">Logout</string>
    <string name="error_enter_contact">Phone number is required</string>
    <string name="error_enter_pickup_contact">Phone number is required</string>
    <string name="error_enter_delivery_contact">Delivery Phone number is required</string>
    <string name="please_enter_pickup_address">Please enter address</string>
    <string name="please_enter_delivery_address">Please enter delivery address</string>
    <string name="tap_again_to_exit_text">Tap again to exit</string>
    <string name="invalid_delivery_time">Delivery time should be greater than pickup time</string>
    <string name="start_end_time_should_be_multiple_of_">Difference between Start time and End time should be multiple of</string>
    <string name="invalid_del_time">Delivery time should be greater than current time</string>
    <string name="invalid_pic_time">Invalid pick-up time</string>
    <string name="invalid_pickup_time">Pick-Up time should be greater than delivery time</string>
    <string name="enter">Enter</string>
    <string name="scheduled_time">Scheduled Time</string>
    <string name="enter_reason">Enter reason</string>
    <string name="scan">Scan</string>
    <string name="manually">MANUALLY</string>
    <string name="add_barcode">Add Barcode</string>
    <string name="profile_updated">Profile updated.</string>
    <string name="address">Address</string>
    <string name="start_date">Start date</string>
    <string name="date_and_time">Date &amp; Time</string>
    <string name="edit">Edit</string>
    <string name="your_current_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="password_updated">Password updated</string>
    <string name="select_text">Select Option</string>
    <string name="permission_was_not_granted_text">The permission was not granted</string>
    <string name="total">Total</string>
    <string name="end_date">End Date</string>
    <string name="dayss">day(s)</string>
    <string name="product_name">Product Name</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="description_text">Description</string>
    <string name="enter_description_text">Enter Description</string>
    <string name="price_type_text">Price Type</string>
    <string name="enter_price_type_text">Enter Price Type</string>
    <string name="price_text">Price</string>
    <string name="enter_price_text">Enter Price</string>
    <string name="add_images_text">Add Images</string>
    <string name="add_product_text">Add </string>
    <string name="unit_text">Unit</string>
    <string name="stay_time">Stay Time:</string>
    <string name="status_text">Status:</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="cost">Cost:</string>
    <string name="name_with_colon">Name:</string>
    <string name="select_template">Select Template</string>
    <string name="schedule_date">Schedule Date</string>
    <string name="enter_unit">Enter Unit</string>
    <string name="time">Time</string>
    <string name="delivery_charges_may">DELIVERY_DELIVERY Charges may vary per day.\nAs per the slots chosen above, the Delivery Charges for different days would be as follows:</string>
    <string name="delivery_surge_charges">DELIVERY_DELIVERY Surge Charges</string>
    <string name="amount_inc_of_delivery_charge">Amount (Inc. of delivery Charge)</string>
    <string name="no_of_occurrences">No. of Occurrences</string>
    <string name="text_did_you_also_want">Did you also want…</string>
    <string name="text_continue_to_checkout">Continue to Checkout</string>
    <string name="text_view_more">View More</string>
</resources>